ROS_Workspace/src/log/build_2023-09-26_17-08-53/UAVMain/stderr.log
  File "/home/teamvision/Desktop/ROS_Workspace/Honours_a1797823_a1764124/ROS_Workspace/src/install/UAVMain/lib/python3.8/site-packages/UAVMain/UAVMain.py", line 57
    break
    ^
SyntaxError: 'break' outside loop

